<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_pass"
            style="@style/MyTextView.Headline5"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_activate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_pass" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_description"
            style="@style/MyTextView.Subtitle1"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_activate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_pass"
            tools:text="1 Day" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_status"
            style="@style/MyTextView.Subtitle1"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_description"
            tools:text="@string/label_available" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_activate"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_pass" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>